[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlantEaterSpawner.gd" type="Script" id=1]
[ext_resource path="res://PlantEater.tscn" type="PackedScene" id=2]

[node name="PlantEaterSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnEnd" type="Position2D" parent="."]
position = Vector2( 1225.55, 451.322 )

[node name="SpawnMiddle" type="Position2D" parent="."]
position = Vector2( 1225.55, 315.625 )

[node name="PlantEater" parent="." instance=ExtResource( 2 )]
position = Vector2( 821.375, -239.377 )
